--- a/portfolio basic.css
+++ b/portfolio basic.css
@@ -1,188 +1,193 @@
 html {
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 
 body {
-    margin: 0;
-    padding: 0;
-    background-color: white;
-    font-family: "Poppins", Arial, Helvetica, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: white;
+  font-family: "Poppins", Arial, Helvetica, sans-serif;
 }
 
 #navbar {
-    margin: 0;
-    padding: 5px 0;
-    width: 100%;
-    height: 50px;
-    position: sticky;
-    top: 0;
-    left: 0;
-    background-color: white;
-    box-shadow: 0 10px 10px -5px rgba(0,0,0,0.1);
+  margin: 0;
+  padding: 5px 0;
+  width: 100%;
+  height: 50px;
+  position: sticky;
+  top: 0;
+  left: 0;
+  background-color: white;
+  box-shadow: 0 10px 10px -5px rgba(0, 0, 0, 0.1);
 }
 
 #navbar ul {
-    display: flex;
-    margin: 10px 0 10px auto;
-    width: 55%;
-    justify-content: space-evenly;
-    list-style: none;
-    
+  display: flex;
+  margin: 10px 0 10px auto;
+  width: 55%;
+  justify-content: space-evenly;
+  list-style: none;
 }
 
 #navbar ul li a {
-    margin-left: 3px;
-    color: black;
-    opacity: 0.7;
-    font-size: 1.2rem;
-    font-family: "Poppins", Arial, Helvetica, sans-serif;
-    text-decoration: none;
+  margin-left: 3px;
+  color: black;
+  opacity: 0.7;
+  font-size: 1.2rem;
+  font-family: "Poppins", Arial, Helvetica, sans-serif;
+  text-decoration: none;
 }
 
 #navbar ul li a:hover {
-    color: lightgreen;
-    opacity: 1;
-    text-decoration: underline;
-    transition: all 0.15s;
+  color: lightgreen;
+  opacity: 1;
+  text-decoration: underline;
+  transition: all 0.15s;
 }
 
 #intro-section {
-    height: 300px;
-    /*background-image: url("https://cdn.pixabay.com/photo/2019/01/31/20/52/web-3967926_1280.jpg");*/
-    background-image: url(images/header.webp);
-    
-    background-size: cover;
+  height: 300px;
+  /*background-image: url("https://cdn.pixabay.com/photo/2019/01/31/20/52/web-3967926_1280.jpg");*/
+  background-image: url(images/header.webp);
+
+  background-size: cover;
 }
 
 #welcome-section {
-    margin: 50px;
-    display: flex;
-    justify-content: center;
+  margin: 50px;
+  display: flex;
+  justify-content: center;
 }
 
 .message {
-    display: flex;
-    margin: 20px;
-    width: 500px;
-    justify-content: center;
-    align-items: center;
-    font-size: 2rem;
-    font-family: "Poppins", Arial, Helvetica, sans-serif;
-    text-align: center;
+  display: flex;
+  margin: 20px;
+  width: 500px;
+  justify-content: center;
+  align-items: center;
+  font-size: 2rem;
+  font-family: "Poppins", Arial, Helvetica, sans-serif;
+  text-align: center;
 }
 
 .message img {
-    max-width: 100%;
+  max-width: 100%;
 }
 
 section {
-    margin-top: 1rem;
-    padding-top: 2rem;
+  margin-top: 1rem;
+  padding-top: 2rem;
 }
 
 .section-heading {
-    font-size: 2rem;
-    text-align: center;
-
+  font-size: 2rem;
+  text-align: center;
 }
 
 .about-container {
-    display: flex;
-    justify-content: center;
-
+  display: flex;
+  justify-content: center;
 }
 
 div.my-information {
-    display: block;
-    font-size: 1.5rem;
-    text-align: left;
+  display: block;
+  font-size: 1.5rem;
+  text-align: left;
 }
 
 #skills-section {
-    background-color: black;
-    color: white;   
+  background-color: black;
+  color: white;
 }
 
 .skills-container {
-    display: flex;
-    flex-wrap: wrap;
-    width: 80%;
-    margin: auto;
-    justify-content: center;
+  display: flex;
+  flex-wrap: wrap;
+  width: 80%;
+  margin: auto;
+  justify-content: center;
 }
 
 .skill-information {
-    padding: 2rem;
-    text-align: center;
+  /*padding: 2rem;*/
+  padding-right: 2rem;
+  padding-left: 2rem;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+
+  display: flex-cols;
+  justify-content: space-between;
+  align-items: center;
+
+  text-align: center;
 }
 
 .skill-name {
-    margin: 0;
-    padding: 0;
-    font-size: 1.5rem;
+  margin: 0;
+  padding: 0;
+  font-size: 1.5rem;
 }
 
 .skill-information progress {
-    background-color: white;
-    border: 1px solid white;
-    border-radius: 3px;
+  background-color: white;
+  border: 1px solid white;
+  border-radius: 3px;
 }
 
 .skill-information progress::-webkit-progress-value {
-    background-color: white;
-    border-radius: 0;
+  background-color: white;
+  border-radius: 0;
 }
 
 .skill-information progress::-webkit-progress-bar {
-    background-color: black;
+  background-color: black;
 }
 
 .projects-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .projects-container .image-box {
-    margin: 5px;   
-
+  margin: 5px;
 }
 .image-box a {
-    text-decoration: none;
-    text-align: center;
+  text-decoration: none;
+  text-align: center;
 }
 
 #contact-section {
-    background-color: black;
-    margin-top:50px;
-    padding: 50px;
-    color: white;
-    text-align: center;
-    font-size: 1.5rem;
-    text-align: center;
+  background-color: black;
+  margin-top: 50px;
+  padding: 50px;
+  color: white;
+  text-align: center;
+  font-size: 1.5rem;
+  text-align: center;
 }
 
 #contact-section a {
-    margin-right: 10px;
-    color: white;
-    text-decoration: none;
+  margin-right: 10px;
+  color: white;
+  text-decoration: none;
 }
 
 .image-box {
-    display: flex;
-    margin: 20px;
-    width: 500px;
-    justify-content: center;
-    align-items: center;
-    font-size: 2rem;
-    font-family: "Poppins", Arial, Helvetica, sans-serif;
-    text-align: center;
+  display: flex;
+  margin: 20px;
+  width: 500px;
+  justify-content: center;
+  align-items: center;
+  font-size: 2rem;
+  font-family: "Poppins", Arial, Helvetica, sans-serif;
+  text-align: center;
 }
 
 .image-box img {
-    max-width: 100%;
+  max-width: 100%;
 }
 
 .skill-information p img {
-    width: 42px;
+  width: 42px;
 }
